import org.jreleaser.model.Active
import org.jreleaser.model.UpdateSection

plugins {
    alias(libs.plugins.jreleaser)
    alias(libs.plugins.publish.plugin)
}

group = "io.github.eurofunk"

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api(libs.cyclonedx.java)


    implementation(libs.bundles.jackson)
    implementation(libs.spdx.utils)

    testImplementation(libs.classgraph)
    testImplementation(libs.equalsverifier)
    testImplementation(libs.junit.jupiter)

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

gradlePlugin {
    website.set("https://www.eurofunk.com")
    vcsUrl.set("https://github.com/eurofunk/sbom-license-plugin")
    plugins {
        register("sbom-license-plugin") {
            id = "io.github.eurofunk.sbom-license-plugin"
            implementationClass = "com.eurofunk.gradle.sbom.license.SbomLicensePlugin"
            displayName = "SBOM License Plugin"
            description = "A Gradle plugin to check SBOM licenses against a policy."
            tags.set(listOf("sbom", "license", "compliance", "cyclonedx"))
        }
    }
}

publishing {
    publications {
        withType<MavenPublication> {
            pom {
                name.set("SBOM License Plugin")
                description.set("A Gradle plugin to check SBOM licenses against a policy.")
                url.set("https://github.com/eurofunk/sbom-license-plugin")
                licenses {
                    license {
                        name.set("The Apache License, Version 2.0")
                        url.set("http://www.apache.org/licenses/LICENSE-2.0.txt")
                    }
                }
                developers {
                    developer {
                        id.set("eurofunk")
                        name.set("Eurofunk Kappacher GmbH")
                        email.set("art-workflow-manager@eurofunk.com")
                    }
                }
                scm {
                    connection.set("scm:git:git://github.com/eurofunk/sbom-license-plugin.git")
                    developerConnection.set("scm:git:ssh://github.com:eurofunk/sbom-license-plugin.git")
                    url.set("https://github.com/eurofunk/sbom-license-plugin")
                }
            }
        }
    }
    repositories {
        maven {
            name = "Staging"
            url = layout.buildDirectory.dir("staging-deploy").get().asFile.toURI()
        }
    }
}

jreleaser {
    project {
        description.set("A Gradle plugin to check SBOM licenses against a policy.")
        copyright.set("Eurofunk Kappacher GmbH")
        links {
            homepage.set("https://github.com/eurofunk/sbom-license-plugin")
        }
    }
    release {
        github {
            val isGithubAction = System.getenv("GITHUB_ACTIONS") == "true"
            // if executed from github, tag is already created
            skipTag.set(isGithubAction)
            overwrite.set(true)
            update {
                enabled.set(true)
                sections.add(UpdateSection.ASSETS)
            }
        }
    }
    signing {
        active.set(Active.ALWAYS)
        armored.set(true)
    }
    deploy {
        active.set(Active.ALWAYS)
        maven {
            active.set(Active.ALWAYS)
            mavenCentral {
                create("sonatype") {
                    active.set(Active.RELEASE)
                    url.set("https://central.sonatype.com/api/v1/publisher")
                    stagingRepository(layout.buildDirectory.dir("staging-deploy").get().asFile.absolutePath)
                    sign.set(true)
                }
            }
            nexus2 {
                create("snapshot-deploy") {
                    active.set(Active.SNAPSHOT)
                    snapshotUrl.set("https://central.sonatype.com/repository/maven-snapshots/")
                    applyMavenCentralRules.set(true)
                    snapshotSupported.set(true)
                    closeRepository.set(true)
                    releaseRepository.set(true)
                    stagingRepository(layout.buildDirectory.dir("staging-deploy").get().asFile.absolutePath)
                    sign.set(true)
                }
            }
        }
    }
}

// Add a source set for the functional test suite
val functionalTestSourceSet = sourceSets.create("functionalTest") {
}

configurations["functionalTestImplementation"].extendsFrom(configurations["testImplementation"])
configurations["functionalTestRuntimeOnly"].extendsFrom(configurations["testRuntimeOnly"])

// Add a task to run the functional tests
val functionalTest by tasks.registering(Test::class) {
    testClassesDirs = functionalTestSourceSet.output.classesDirs
    classpath = functionalTestSourceSet.runtimeClasspath
    useJUnitPlatform()
}

gradlePlugin.testSourceSets.add(functionalTestSourceSet)

tasks.named<Task>("check") {
    // Run the functional tests as part of `check`
    dependsOn(functionalTest)
}

tasks.named<Test>("test") {
    // Use JUnit Jupiter for unit tests.
    useJUnitPlatform()
}
